[tool.poetry]
name = "telegram-avatar-watch"
version = "0.1.0"
description = "Script that updates your Telegram avatar to the current time"
authors = ["Eldos <eldos.baktybekov@gmail.com>"]
readme = "README.md"
packages = [{include = "telegram_avatar_watch"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
